Fix cut off loved one image and name

--- a/resources/sass/general.scss
+++ b/resources/sass/general.scss
@@ -5,7 +5,6 @@ body{
 }
 
 .dropdown-menu
-.dropdown-menu
 {
     border: none;
 
@@ -14,8 +13,10 @@ body{
         margin-bottom: 15px;
 
         .fas, .far {
-            font-size: 16px;  
+            font-size: 21px;  
             padding: 0 10px 0 20px;  
+            min-width: 61px;
+            text-align: center;
         }
     }
 }
@@ -23,7 +24,6 @@ body{
 .navbar{
     padding: 10px;
     z-index: 10;
-
 }
 
 .navbar-light .navbar-nav .nav-link {
